--- a/grpc_server/Cargo.toml
+++ b/grpc_server/Cargo.toml
@@ -10,6 +10,7 @@ tonic = "0.8"
 prost = "0.11"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 tokio-stream = "0.1"
+mlsmpm = { path = "../mlsmpm" }
 
 [build-dependencies]
 tonic-build = "0.8"
