--- a/mpm_rust/grpc_server/Cargo.toml
+++ b/mpm_rust/grpc_server/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 tonic = "0.8"
+tonic-reflection = "0.6"
 prost = "0.11"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 tokio-stream = "0.1"
