--- a/particle_viewer/package.json
+++ b/particle_viewer/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.8.0",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "grpc": "^1.24.11",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
