--- a/mpm_rust/Cargo.toml
+++ b/mpm_rust/Cargo.toml
@@ -6,3 +6,9 @@ members = [
     "viewer",
 ]
 default-members = ["viewer"]
+
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
