--- a/mpm_rust/viewer/Cargo.toml
+++ b/mpm_rust/viewer/Cargo.toml
@@ -6,8 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-piston_window = "*"
-piston2d-graphics = "*"
-pistoncore-glutin_window = "*"
-piston2d-opengl_graphics = "*"
 mlsmpm = { path = "../mlsmpm" }
+piston_window = "0.127.0"
