--- a/mpm_rust/viewer/Cargo.toml
+++ b/mpm_rust/viewer/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.23"
+csv = "1.1.6"
 mlsmpm = { path = "../mlsmpm" }
 piston_window = "0.127.0"
