--- a/mpm_rust/Cargo.toml
+++ b/mpm_rust/Cargo.toml
@@ -1,14 +1,8 @@
 [workspace]
-
+resolver = "2"
 members = [
     "mlsmpm",
     "examples",
     "viewer",
 ]
 default-members = ["viewer"]
-
-[profile.dev]
-opt-level = 1
-
-[profile.dev.package."*"]
-opt-level = 3
