--- a/mpm_rust/viewer/Cargo.toml
+++ b/mpm_rust/viewer/Cargo.toml
@@ -9,3 +9,12 @@ edition = "2021"
 chrono = "0.4.23"
 mlsmpm = { path = "../mlsmpm" }
 piston_window = "0.127.0"
+cfg-if = "1"
+winit = "0.27"
+env_logger = "0.10"
+log = "0.4"
+wgpu = "0.15"
+pollster = "0.2"
+bytemuck = "1.13.1"
+bevy="0.10"
+bevy_points="0.2"
