--- a/mpm_rust/.gitignore
+++ b/mpm_rust/.gitignore
@@ -3,5 +3,7 @@
 /temp
 /exp_poiseuille
 /exp_dambreak
+/examples/exp_taylorgreen_ver2
+/examples/exp_poiseuille_ver2
 /exp_taylorgreen_ver2
 /exp_poiseuille_ver2
