--- a/mpm_rust/.gitignore
+++ b/mpm_rust/.gitignore
@@ -7,5 +7,7 @@
 /exp_taylorgreen_ver2
 /examples/exp_poiseuille_ver2
 /exp_poiseuille_ver2
+/examples/exp_taylorgreen_g2p
+/exp_taylorgreen_g2p
 /examples/exp_dissipation
 /exp_dissipation
