--- a/mpm_rust/.gitignore
+++ b/mpm_rust/.gitignore
@@ -1,13 +1,21 @@
 /target
 
 /temp
+
 /exp_poiseuille
 /exp_dambreak
+
 /examples/exp_taylorgreen_ver2
 /exp_taylorgreen_ver2
+
 /examples/exp_poiseuille_ver2
 /exp_poiseuille_ver2
+
 /examples/exp_taylorgreen_g2p
 /exp_taylorgreen_g2p
+
 /examples/exp_dissipation
 /exp_dissipation
+
+/examples/exp_taylorgreen_pressure
+/exp_taylorgreen_pressure
