taylorgreen > 実験の拡充

--- a/mpm_rust/.gitignore
+++ b/mpm_rust/.gitignore
@@ -19,3 +19,6 @@
 
 /examples/exp_taylorgreen_pressure
 /exp_taylorgreen_pressure
+
+/examples/exp_taylorgreen_ver2_cubic
+/exp_taylorgreen_ver2_cubic
