taylorgreen > 実験の拡充

--- a/mpm_rust/.gitignore
+++ b/mpm_rust/.gitignore
@@ -22,3 +22,6 @@
 
 /examples/exp_taylorgreen_ver2_cubic
 /exp_taylorgreen_ver2_cubic
+
+/examples/exp_taylorgreen_ver2_forward
+/exp_taylorgreen_ver2_forward
