--- a/mpm_rust/.gitignore
+++ b/mpm_rust/.gitignore
@@ -25,3 +25,6 @@
 
 /examples/exp_taylorgreen_ver2_forward
 /exp_taylorgreen_ver2_forward
+
+/examples/exp_taylorgreen_reset
+/exp_taylorgreen_reset
