--- a/mpm_rust/mlsmpm_macro/Cargo.toml
+++ b/mpm_rust/mlsmpm_macro/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-quote = "1.0.32"
-syn = { version = "2.0.38", full = true }
+proc-macro2 = "1.0"
+quote = "1.0"
+syn = { version = "2.0.38", features = ["full"] }
